# adloop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  README.md  config.yaml.example  index.html  pyproject.toml
.claude/commands/: weekly-report.md
.claude/rules/: adloop.md
.claude/skills/adloop-planning/: SKILL.md
.claude/skills/adloop-planning/evals/: evals.json
.claude/skills/adloop-read/: SKILL.md
.claude/skills/adloop-read/evals/: evals.json
.claude/skills/adloop-tracking/: SKILL.md
.claude/skills/adloop-tracking/evals/: evals.json
.claude/skills/adloop-write/: SKILL.md
.claude/skills/adloop-write/evals/: evals.json
.cursor/rules/: adloop.mdc  releasing.mdc
.github/workflows/: ci.yml  release.yml
privacy/: index.html
scripts/: cleanup_sitelink_links.py  sync-rules.py
src/adloop/: __init__.py  _mcp_patches.py  auth.py  cli.py  config.py  crossref.py  diagnostics.py  rules_install.py  server.py  tracking.py
src/adloop/ads/: client.py  conversion_actions.py  currency.py  enums.py  forecast.py  gaql.py  pmax.py  read.py  write.py
src/adloop/gsc/: client.py  reports.py
src/adloop/gtm/: __init__.py  client.py  read.py  write.py
src/adloop/rules/: __init__.py
terms/: index.html
tests/: test_ads_enums.py  test_ads_extensions.py  test_ads_write.py  test_cli.py  test_config.py  test_conversion_actions.py  test_currency.py  test_forecast.py  test_gtm.py  test_gtm_write.py  test_rules_install.py  test_server.py  test_update_rsa.py
tests/evals/: README.md  planning.json  read.json  tracking.json  write.json
(+6 files in other folders)
